--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #1d0185; }
+  background: #fe5911; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #0c3e68; }
+  background: #6dac7a; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #982e1f; }
+  background: #6f24a7; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #3a0fb1; }
+  background: #229fd6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #bdeac7; }
+  background: #683ea1; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #11a63e; }
+  background: #2b979c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8a54ed; }
+  background: #92d6d2; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a0e62d; }
+  background: #2f0fd8; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3aaedc; }
+  background: #fcfdd0; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #91a9cd; }
+  background: #1aa654; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #0928de; }
+  background: #297b53; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #7d34b1; }
+  background: #ad241a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #0a97df; }
+  background: #7ff45a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #cd93bb; }
+  background: #e02de3; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #06c37a; }
+  background: #5167ec; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #acbf90; }
+  background: #1d5fc2; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #9d942a; }
+  background: #68e5b1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #7cee92; }
+  background: #24fb60; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #43324b; }
+  background: #6dedf9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #de9347; }
+  background: #6f19c0; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #5e5a98; }
+  background: #4ff483; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #69750d; }
+  background: #d465a8; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #0265fd; }
+  background: #6e9340; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #b18a66; }
+  background: #dfc257; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #d56e09; }
+  background: #a7f688; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #47d3ae; }
+  background: #a19518; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #5a1b42; }
+  background: #292095; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7dfd6f; }
+  background: #013582; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #084dc7; }
+  background: #3f9c32; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #09b3e6; }
+  background: #0b68f2; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #cdc51f; }
+  background: #3b4ed7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #96224f; }
+  background: #06ea78; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #85ffe2; }
+  background: #f40a39; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #18d7ca; }
+  background: #f0f177; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #adacfb; }
+  background: #41ab2c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #83d74c; }
+  background: #aedd90; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ad30ce; }
+  background: #a77240; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #925fa6; }
+  background: #024561; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #bbe066; }
+  background: #7da954; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #938e59; }
+  background: #2095e8; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #94191a; }
+  background: #f30d48; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #c41646; }
+  background: #b35871; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #080bec; }
+  background: #6913c3; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c18417; }
+  background: #16a510; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #dba935; }
+  background: #03c274; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #887602; }
+  background: #c1671f; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #cccc96; }
+  background: #d0aeb4; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d0b5fc; }
+  background: #74b998; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f1536d; }
+  background: #d74f08; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #921d84; }
+  background: #4ac185; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ab0cef; }
+  background: #52fb6f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2f8644; }
+  background: #4ba115; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #e01ab7; }
+  background: #ddb562; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ae75c1; }
+  background: #1e4897; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4ef290; }
+  background: #8298ae; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #80acc4; }
+  background: #548d0b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2ab5ca; }
+  background: #ddf9ed; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #c3c988; }
+  background: #1755d5; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #28fca2; }
+  background: #233f9f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #de1ee6; }
+  background: #e48e6f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #239782; }
+  background: #c1c8bd; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #ca510b; }
+  background: #6cdc68; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #01cf44; }
+  background: #8ba055; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e4ce6b; }
+  background: #03d8c3; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c83e47; }
+  background: #6eb7ab; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #bf8f98; }
+  background: #cc43f9; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a2bebd; }
+  background: #7ae9f3; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #bb4356; }
+  background: #4c1474; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #f4dcbb; }
+  background: #baff25; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #263b5e; }
+  background: #661f07; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #5055f7; }
+  background: #c30dee; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ad1206; }
+  background: #68621a; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #2fe3c6; }
+  background: #9dbb97; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #62220d; }
+  background: #69e353; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #84801a; }
+  background: #a056d8; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #0b847a; }
+  background: #b8d6bb; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b168c3; }
+  background: #c3ee33; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1146f5; }
+  background: #fda104; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #25563d; }
+  background: #4a5fd6; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #270781; }
+  background: #2a0649; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #014c41; }
+  background: #1151c4; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #7da13c; }
+  background: #212ba4; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5d9825; }
+  background: #e5165a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #4d706b; }
+  background: #85ab05; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #894b96; }
+  background: #fa138d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #0c444f; }
+  background: #e98125; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d0624c; }
+  background: #98d9e4; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b8ca7c; }
+  background: #f7d0ee; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ed342e; }
+  background: #0a21c5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #b9dbe7; }
+  background: #5128c2; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b62125; }
+  background: #2ae7f3; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #59e8c3; }
+  background: #aa485e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a7ff49; }
+  background: #8127c3; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a1f7b6; }
+  background: #1f5a15; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #fc0ee2; }
+  background: #a3e353; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #961ac1; }
+  background: #206eb7; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #43060a; }
+  background: #bda610; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #3c0128; }
+  background: #839f06; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4b306d; }
+  background: #e089ca; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #72841d; }
+  background: #e0a4df; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11508,15 +11508,11 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-logo {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-name {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -12724,6 +12720,11 @@ td .check-container {
   background-position-x: 90%;
   background-position-y: 18px;
   box-sizing: border-box; }
+
+.custom-select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
