--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -391,6 +391,12 @@
 }
 
 /*767 screen end here*/
+/*768 to 1023 screen css*/
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .LoginPanel {
+        padding: 20px;
+    }
+}
 
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
     .query-wizard-exp-contents {
